--- a/style.css
+++ b/style.css
@@ -17,7 +17,14 @@ div.container {
     margin: 0 auto;
 }
 
-img {
+img.banner {
+    width: 100%;
+    aspect-ratio: 2 / 1;
+    object-fit: cover;
+    margin-bottom: -75px;
+}
+
+img.perfil {
     width: 150px;
     border-radius: 50%;
     margin-bottom: 12px;
