--- a/style.css
+++ b/style.css
@@ -6,88 +6,305 @@
 }
 
 body {
-    padding-bottom: 60px;
-    background-color: rgb(31, 31, 31);
-    color: #fff;
+    background: rgb(12, 0, 0);
 }
 
-div.container {
-    width: 90%;
-    max-width: 900px;
-    margin: 0 auto;
+section.container {
+    width: 95%;
+    max-width: 820px;
+    margin: auto;
 }
 
-img.banner {
+span.cesar {
+    color: darkorange;
+}
+
+header {
+    background-image: url('./img/banner.gif');
+    background-position: bottom;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
     width: 100%;
-    margin-bottom: -80px;
-    aspect-ratio: 7 / 2;
-    object-fit: cover;
-    object-position: unset;
+    margin: auto;
+    position: relative;
+    min-height: 350px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 2%;
+    padding-bottom: 50px;
 }
 
-img.perfil {
-    width: 150px;
+header div.info {
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    flex-direction: column;
+}
+
+header div.info h1 {
+    font-size: 45px;
+    font-weight: 400;
+    transform: translateX(-3px);
+}
+
+header div.info p {
+    margin-bottom: 16px;
+}
+
+header div.info div.links a {
+    font-size: 28px;
+    margin-right: 8px;
+    color: crimson;
+    text-decoration: none;
+    transition: 400ms;
+
+    &:hover {
+        color: bisque;
+    }
+}
+
+header img.profile {
+    width: 200px;
+    height: 200px;
+    aspect-ratio: 1 / 1;
     border-radius: 50%;
-    margin-bottom: 12px;
-    border: 2px solid #fff;
+    margin-left: -72px;
 }
 
-.jazzz {
-    color: gold;
+header div.pelicula,
+header img.background {
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    height: 100%;
+    width: 100%;
 }
 
-.cesar {
-    color: orange;
+header div.info,
+header img.profile {
+    position: relative;
+    z-index: 6;
 }
 
-#sobre {
-    margin: 8px 0px 12px 0px;
+header div.pelicula {
+    background-color: black;
+    opacity: 0.5;
+    z-index: 5;
 }
 
-a {
-    color: #1eb8ff;
+header img.background {
+    z-index: 4;
+    object-fit: cover;
 }
 
-.fa-linkedin, .fa-square-instagram {
-    color: #0096dc;
-    font-size: 18px;
-    margin-right: 4px;
+/* divisória */
+
+div.divisoria {
+    position: relative;
+    z-index: 20;
+    width: 100%;
+    height: 120px;
+    margin-top: -60px;
+    background: rgb(12, 0, 0);
+    background: linear-gradient(180deg, rgba(12, 0, 0, 0) 0%, rgba(12, 0, 0, 1) 60%);
 }
 
-p.instagram {
-    margin-top: 8px;
+/* seções */
+
+section {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
-.fa-square-instagram {
-    color: rgb(226, 43, 211);
+section h1 {
+    text-transform: uppercase;
+    font-size: 48px;
+    color: crimson;
+    font-weight: 400;
+    position: relative;
 }
 
-p.instagram a {
-    color: rgb(226, 43, 211);
+section h1::before {
+    content: "";
+    width: 50%;
+    height: 2px;
+    background-color: bisque;
+    position: absolute;
+    bottom: -8px;
+    left: 50%;
+    transform: translateX(-50%);
 }
 
-ul li:nth-child(3) {
-    color: orange;
+section p {
+    color: whitesmoke;
+    font-size: 22px;
+    line-height: 28px;
+    width: 100%;
 }
 
-hr {
-    margin-top: 22px;
-    margin-bottom: 8px;
+section.sobre {
+    padding-bottom: 80px;
+    gap: 42px;
 }
 
-h3 {
-    margin-bottom: 12px;
+section.sobre h3 {
+    color: crimson;
+    align-self: flex-start;
+    font-size: 26px;
 }
 
-ul, ol {
+section.sobre ul {
+    align-self: flex-start;
+    color: whitesmoke;
     margin-left: 22px;
+    font-size: 22px;
+    margin-top: -28px;
 }
 
-table, th, td {
-    border: 1px solid #fff;
-    border-collapse: collapse;
+section.skills {
+    padding: 32px;
+    border-radius: 4px;
+    margin-bottom: 80px;
+    gap: 42px;
+    background-color: rgba(255, 255, 255, 0.15);
+    backdrop-filter: blur(50px);
+    box-shadow: 0px 0px 18px rgba(255, 255, 255, 0.4);
 }
 
-th, td {
-    padding: 8px;
+section.skills p {
+    text-align: center;
+}
+
+section.skills ul {
+    margin-top: -22px;
+    display: flex;
+    gap: 26px;
+    list-style-type: none;
+    font-size: 48px;
+    color: whitesmoke;
+}
+
+section.skills ul li:nth-child(1) {
+    color: darkorange;
+}
+section.skills ul li:nth-child(2) {
+    color: rgb(0, 174, 255);
+}
+section.skills ul li:nth-child(3) {
+    color: rgb(255, 242, 0);
+}
+section.skills ul li:nth-child(4) {
+    color: rgb(72, 189, 0);
+}
+section.skills ul li:nth-child(5) {
+    color: crimson;
+}
+section.skills ul li:nth-child(6) {
+    color: rgb(0, 140, 255);
+}
+
+section.skills ul li {
+    transition: 400ms;
+}
+
+section.skills p.jornada {
+    text-align: left;
+}
+
+section.projetos {
+    max-width: 1200px;
+    padding-bottom: 120px;
+    gap: 48px;
+}
+
+section.projetos div.cards {
+    width: 100%;
+    display: grid;
+    gap: 12px;
+    grid-template-columns: repeat(3, 1fr);
+}
+
+section.projetos div.cards a {
+    overflow: hidden;
+    aspect-ratio: 16 / 10;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+}
+
+section.projetos div.cards a:hover img {
+    scale: 1.05;
+}
+
+section.projetos div.cards a:hover h3 {
+    opacity: 1;
+}
+
+section.projetos div.cards a h3 {
+    position: absolute;
+    left: 0px;
+    top: 0px;
+    height: 100%;
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0.6);
+    z-index: 10;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 22px;
+    color: whitesmoke;
+    font-weight: 400;
+    opacity: 0;
+    transition: 400ms;
+}
+
+section.projetos div.cards img {
+    aspect-ratio: 16 / 10;
+    object-fit: cover;
+    transition: 1000ms;
+    width: 100%;
+}
+
+section.projetos a.github {
+    text-align: center;
+    color: #000;
+    text-decoration: none;
+    background-color: whitesmoke;
+    padding: 8px 32px;
+    border-radius: 4px;
+    border: 2px solid whitesmoke;
+    transition: 400ms;
+    font-size: 22px;
+}
+
+section.projetos a.github:hover {
+    color: whitesmoke;
+    background-color: #000;
+    box-shadow: 0px 0px 16px rgba(255, 255, 255, 1);
+}
+
+/* rodapé */
+
+footer {
+    padding: 32px;
+    border-top: 1px solid rgba(255, 255, 255, 0.4);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+footer p {
+    color: whitesmoke;
+    font-size: 18px;
+}
+
+footer img {
+    width: 60px;
 }
